--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                                     <strong>Resume</strong>
                                 </h4>
                                 <p>Download a copy of my resume to do with what you please (like give me a job)</p>
-                                <a href="#" class="btn btn-light">Learn More</a>
+                                <a href="/Joshua-Colbert-Resume.doc" download class="btn btn-light">Save</a>
                             </div>
                         </div>
                         <div class="col-md-3 col-sm-6">
