--- a/index.html
+++ b/index.html
@@ -310,10 +310,10 @@
     </footer>
 
     <!-- jQuery -->
-    <script src="js/jquery.js"></script>
+    <script async src="js/jquery.js"></script>
 
     <!-- Bootstrap Core JavaScript -->
-    <script src="js/bootstrap.min.js"></script>
+    <script async src="js/bootstrap.min.js"></script>
 
     <!-- Custom Theme JavaScript -->
     <script>
@@ -399,7 +399,7 @@
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Cabin+Sketch|Cinzel" rel="stylesheet">
-    <script src="http://d3js.org/d3.v3.min.js"></script>
+    <script async src="http://d3js.org/d3.v3.min.js"></script>
 </body>
 
 </html>
