--- a/index.html
+++ b/index.html
@@ -390,10 +390,10 @@
     </script>
 
 
-    <link href="css/bootstrap.min.css" rel="stylesheet" media="css">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="css/stylish-portfolio.css" rel="stylesheet" media="css">
+    <link href="css/stylish-portfolio.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
