--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
                             <div class="portfolio-item">
                                 <span itemprop="workExample" itemtype="http://schema.org/CreativeWork">
                                     <a itemprop="url" href="http://www.joshuacolbertphotography.com/landscapes">
-                                        <img class="img-portfolio img-responsive" src="img/xportfolio-1.jpg.pagespeed.ic.PPyhwWP4S5.jpg: http://joshcolbert.com/img/xportfolio-1.jpg.pagespeed.ic.PPyhwWP4S5.jpg" alt="Joshua Colbert Photography">
+                                        <img class="img-portfolio img-responsive" src="img/xportfolio-1.jpg.pagespeed.ic.PPyhwWP4S5.jpg" alt="Joshua Colbert Photography">
                                     </a>
                                 </span>
                             </div>
@@ -224,7 +224,7 @@
                             <div class="portfolio-item">
                                 <span itemprop="brand" itemtype="http://schema.org/LocalBusiness">
                                     <a itemprop="url" href="http://saltcitygaragedoors.com">
-                                        <img class="img-portfolio img-responsive" src="img/xportfolio-2.jpg.pagespeed.ic.jHdHUwrZ4Z.jpg: http://joshcolbert.com/img/xportfolio-2.jpg.pagespeed.ic.jHdHUwrZ4Z.jpg">
+                                        <img class="img-portfolio img-responsive" src="img/xportfolio-2.jpg.pagespeed.ic.jHdHUwrZ4Z.jpg">
                                     </a>
                                 </span>
                             </div>
