--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link async href="css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link async href="css/stylish-portfolio.css" rel="stylesheet">
+    <link async href="css/global.css" rel="stylesheet">
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -176,10 +176,10 @@
     <br>
     <br>
     <!-- Callout -->
-    <aside class="callout">
-        <!-- <div class="text-vertical-center">
+<!--     <aside class="callout">
+        <div class="text-vertical-center">
             <h1>Vertically Centered Text</h1>
-        </div> -->
+        </div>
           <section>
     <h1>HTML</h1>
     <div class="arrow">
@@ -201,7 +201,7 @@
     </div>
     </div>
   </section>
-    </aside>
+    </aside> -->
 
     <!-- Portfolio -->
     <section id="portfolio" class="portfolio">
